part1/randHash/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: randhash-svc
spec:
  type: ClusterIP
  selector:
    app: randhash
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
