part1/randHash/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: randhash-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: randhash-svc
          servicePort: 2345
